<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NoteFilterFragment"
    android:background="#55555555">
    <FrameLayout
        android:background="#FFFFFF"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/content_filter_entry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/filter_by_content_label" />

            <GridLayout
                android:columnCount="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:checked="true"
                    android:id="@+id/importance_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:padding="5dp"
                    android:text="@string/importance_low" />

                <CheckBox
                    android:checked="true"
                    android:id="@+id/importance_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:padding="5dp"
                    android:text="@string/importance_medium" />

                <CheckBox
                    android:checked="true"
                    android:id="@+id/importance_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:padding="5dp"
                    android:text="@string/importance_high" />

            </GridLayout>

            <Button
                android:id="@+id/apply_filters_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_filters" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>